Changed selecting instument by dropdown version

--- a/src/index.css
+++ b/src/index.css
@@ -456,6 +456,14 @@ main,
   background-color: whitesmoke;
 }
 
+.select-instrument-dropdown {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 25%;
+  height: 5rem;
+}
+
 .select-instrument,
 .select-note,
 .select-sequence,
