--- a/src/index.css
+++ b/src/index.css
@@ -531,6 +531,10 @@ button:hover {
   height: 0;
 }
 
+/* ****************************** */
+/* Cirble of fifth */
+/* ****************************** */
+
 .circle-of-fifths-container {
   display: grid;
   width: 40vw;
